--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.3.2",
     "phosphor-vue": "^4.4.1",
-    "vue": "^3.2.45"
+    "pinia": "^2.0.30",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
