--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "localforage": "^1.10.0",
     "phosphor-vue": "^4.4.1",
     "pinia": "^2.0.30",
     "vue": "^3.2.45",
