--- a/server/config.yaml.example
+++ b/server/config.yaml.example
@@ -1,5 +1,8 @@
-api_keys:
-  tmdb: "<your api key>"
+media_providers:
+  tmdb:
+    api_key: "<your api key>"
+    poster_base_url: "https://image.tmdb.org/t/p/w780"
+    poster_fs_base_path: "/path/to/posters/"
 
 users:
   - "Andy"
