--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^1.5.0",
     "axios": "^1.3.2",
     "localforage": "^1.10.0",
-    "phosphor-vue": "^4.4.1",
     "pinia": "^2.0.30",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -20,8 +20,9 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "prettier": "^2.8.3",
     "sass": "^1.58.0",
+    "terser": "^5.16.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
+    "vite": "^4.1.1",
     "vue-tsc": "^1.0.24"
   }
 }
