--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@phosphor-icons/vue": "^1.5.0",
     "axios": "^1.3.2",
+    "eventemitter3": "^5.0.0",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
-    "pinia": "^2.0.30",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "prettier": "^2.8.4",
     "sass": "^1.58.0",
