improve server side logging; split up server capabilities
- server: try to respect global debug config where possible
- server: minimize log output in production
- server: split up capabilities for possible load-balancing

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -18,4 +18,4 @@ VOLUME /opt/movie-match/posters
 
 ENTRYPOINT [ "/opt/movie-match/movie-match" ]
 
-CMD [ "serve" ]
+CMD [ "serve", "--web", "--with-token-cleanup", "--with-media-auto-pull" ]
