--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-lottie": "^2.7.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
