--- a/app/package.json
+++ b/app/package.json
@@ -9,24 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@phosphor-icons/vue": "^1.5.0",
-    "axios": "^1.3.2",
-    "eventemitter3": "^5.0.0",
-    "js-cookie": "^3.0.1",
+    "@phosphor-icons/vue": "2.0.1",
+    "axios": "^1.4.0",
+    "eventemitter3": "^5.0.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "vue": "^3.3.2",
+    "vue-router": "^4.2.0",
     "vue3-lottie": "^2.7.0"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "prettier": "^2.8.4",
-    "sass": "^1.58.0",
-    "terser": "^5.16.3",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
-    "vue-tsc": "^1.0.24"
+    "@types/js-cookie": "^3.0.3",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "terser": "^5.17.3",
+    "typescript": "5.0.4",
+    "vite": "^4.3.5",
+    "vue-tsc": "^1.6.5"
   }
 }
