--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "version": "2.2.0",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
@@ -24,7 +25,6 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "terser": "^5.17.3",
     "typescript": "5.0.4",
     "vite": "^4.3.5",
     "vue-tsc": "^1.6.5"
