--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,12 @@
   "version": "2.2.0",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev --port 6006 --host 0.0.0.0",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@phosphor-icons/vue": "2.0.1",
@@ -15,18 +18,28 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vue3-lottie": "^2.7.0"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/addon-viewport": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@storybook/vue3": "^7.0.22",
+    "@storybook/vue3-vite": "^7.0.22",
     "@types/js-cookie": "^3.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "terser": "^5.17.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.63.4",
+    "storybook": "^7.0.22",
+    "storybook-vue3-router": "^3.0.0",
     "typescript": "5.0.4",
-    "vite": "^4.3.5",
-    "vue-tsc": "^1.6.5"
+    "vite": "^4.3.9",
+    "vue-tsc": "^1.8.0"
   }
 }
