--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "storybook": "storybook dev --port 6006 --host 0.0.0.0",
     "build-storybook": "storybook build"
   },
+  "packageManager": "pnpm@8.6.10",
   "dependencies": {
     "@phosphor-icons/vue": "2.0.1",
     "axios": "^1.4.0",
